Fix dark mode for Innovation

--- a/src/css/games/innovation/darkStyle.less
+++ b/src/css/games/innovation/darkStyle.less
@@ -1,11 +1,57 @@
 @import "../common";
 
-.card_name { text-shadow: var(--text-w-shadow); }
-#main_area .bgabutton { color: #000; }
-.hand_container, .achievement_container, .forecast_container, .safe_container, .score_container { background-color: transparent; }
-.score_container, .achievement_container, #available_achievements_container, #available_special_achievements_container,
-#available_standard_achievements_container, #decks_and_title, #junk_container { color: var(--light-80); }
-.action_text, .echo_effect, .reference_card { color: #000; }
-.display_container > div { background-color: var(--dark-back) !important; }
-.dijitTooltipContainer .icon_help { width: 16px; height: 16px; }
-.recto.S.card_back_text { color: #000; }
+.card_name {
+	text-shadow: var(--text-w-shadow);
+}
+
+#main_area .bgabutton {
+	color: #000;
+}
+
+.hand_container,
+.achievement_container,
+.forecast_container,
+.safe_container,
+.score_container {
+	background-color: transparent;
+}
+
+.score_container,
+.achievement_container,
+#available_achievements_container,
+#available_special_achievements_container,
+#available_standard_achievements_container,
+#available_museums_container,
+#available_relics_container,
+#decks_and_title,
+#junk_container {
+	color: var(--light-80);
+}
+
+.action_text,
+.echo_effect,
+.reference_card {
+	color: #000;
+}
+
+.display_container,
+.museums_container {
+	background-color: transparent;
+}
+
+div[style="background-color:rgba(0, 0, 0, .2);"] {
+	background-color: var(--dark-back) !important;
+}
+
+.dijitTooltipContainer .icon_help {
+	width: 16px;
+	height: 16px;
+}
+
+.recto.S.card_back_text {
+	color: #000;
+}
+
+#logs [style^="color:#000000"] {
+	color: 000 !important;
+}
